[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-vis-ceaoi"
version = "0.1.0"
description = "Simple visualization and text logging utilities for tensors and arrays"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "ceaoi" }
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]